added Interaction testing dir and mafGizmoROI_BESTest The medical mafGizmoROI_BES should be merged with mafGizmoROI maf class.

--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -31,6 +31,10 @@ IF (BUILD_COMMON_TESTING)
   SUBDIRS(Common)
 ENDIF (BUILD_COMMON_TESTING)
 
+OPTION(BUILD_INTERACTION_TESTING "Enable building of testing for INTERACTION classes" ON)
+IF (BUILD_INTERACTION_TESTING)
+  SUBDIRS(Interaction)
+ENDIF (BUILD_INTERACTION_TESTING)
 
 # wxWidgets specific classes
 IF (MAF_USE_WX)
