--- a/MEDUse.cmake.in
+++ b/MEDUse.cmake.in
@@ -2,6 +2,8 @@ INCLUDE(CMakeImportBuildSettings)
 
 CMAKE_IMPORT_BUILD_SETTINGS("${MED_BUILD_SETTINGS_FILE}")
 
+INCLUDE(@USE_MedFL_FILE@)
+
 INCLUDE_DIRECTORIES(${MED_INCLUDE_DIRS})
 
 LINK_DIRECTORIES(${MED_LIBRARY_DIRS})
