removed not used include directories

--- a/MEDUse.cmake.in
+++ b/MEDUse.cmake.in
@@ -2,7 +2,9 @@ INCLUDE(CMakeImportBuildSettings)
 
 CMAKE_IMPORT_BUILD_SETTINGS("${MED_BUILD_SETTINGS_FILE}")
 
-INCLUDE(@USE_MedFL_FILE@)
+IF (${CMAKE_GENERATOR} STREQUAL "Visual Studio 9 2008")
+  INCLUDE(@BTK_USE_FILE@)
+ENDIF (${CMAKE_GENERATOR} STREQUAL "Visual Studio 9 2008")
 
 INCLUDE_DIRECTORIES(${MED_INCLUDE_DIRS})
 
