changed condition for use BTK

--- a/MEDUse.cmake.in
+++ b/MEDUse.cmake.in
@@ -2,9 +2,11 @@ INCLUDE(CMakeImportBuildSettings)
 
 CMAKE_IMPORT_BUILD_SETTINGS("${MED_BUILD_SETTINGS_FILE}")
 
-IF (${CMAKE_GENERATOR} STREQUAL "Visual Studio 9 2008")
+#IF (${CMAKE_GENERATOR} STREQUAL "Visual Studio 9 2008")
+IF (MED_USE_BTK)
   INCLUDE(@BTK_USE_FILE@)
-ENDIF (${CMAKE_GENERATOR} STREQUAL "Visual Studio 9 2008")
+ENDIF (MED_USE_BTK)
+#ENDIF (${CMAKE_GENERATOR} STREQUAL "Visual Studio 9 2008")
 
 INCLUDE_DIRECTORIES(${MED_INCLUDE_DIRS})
 
