mafOpGarbageCollectMSFDir , mafOpGarbageCollectMSFDirTest and test data

--- a/Operations/CMakeLists.txt
+++ b/Operations/CMakeLists.txt
@@ -105,6 +105,8 @@ IF (MAF_USE_VTK)
     mafOpEditNormals.h
     mafOpApplyTrajectory.cpp
     mafOpApplyTrajectory.h
+	mafOpGarbageCollectMSFDir.cpp
+	mafOpGarbageCollectMSFDir.h
   )
 ENDIF (MAF_USE_VTK)
 
